--- a/doc/en/dita/api_select.dita
+++ b/doc/en/dita/api_select.dita
@@ -2,10 +2,12 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd" >
 <reference id="en_api_select" xml:lang="en-US">
 	<title>API Search / Select</title>
-	<shortdesc>API Search/Select is the interface to query OSS search
+	<shortdesc>API Search/Select is the interface to query the OSS
+		search
 		engine.
-		The call is sent by a HTTP request,
-		POST OR GET are both
+		The call is sent through a HTTP request.
+		POST OR GET are
+		both
 		available. The engine will answer with a XML result.
 	</shortdesc>
 	<prolog>
@@ -54,28 +56,28 @@
 			</strow>
 			<strow>
 				<stentry>qt</stentry>
-				<stentry>Enable you to pre-load a set query in index configuration file <varname>config.xml</varname>. Ex.: <codeph>qt=requestName</codeph></stentry>
+				<stentry>Enables you to pre-load a set query in index configuration file <varname>config.xml</varname>. Ex.: <codeph>qt=requestName</codeph></stentry>
                 <stentry>Text</stentry>
 				<stentry></stentry>
 				<stentry>no</stentry>
 			</strow>
 			<strow>
 				<stentry>start</stentry>
-				<stentry>Indicate the first result's rank shown. This parameter allows a pagination. Ex.: <codeph>start=10</codeph></stentry>
+				<stentry>Indicates the first result's rank shown. This parameter allows for a pagination. Ex.: <codeph>start=10</codeph></stentry>
 				<stentry>Number</stentry>
 				<stentry>0</stentry>
 				<stentry>no</stentry>
 			</strow>
 			<strow>
 					<stentry>rows</stentry>
-					<stentry>Indicates the number of records to return. Associated with 'start' parameter,  This parameter allows pagination. Ex.: <codeph>rows=5</codeph></stentry>
+					<stentry>Indicates the number of records to returned. Associated with the 'start' parameter,  This parameter allows for a pagination. Ex.: <codeph>rows=5</codeph></stentry>
 					<stentry>Number</stentry>
 					<stentry>10</stentry>
 					<stentry>no</stentry>
 			</strow>
 			<strow>
 					<stentry>lang</stentry>
-					<stentry>Indicates the language of the keywords passed to parameter <varname>q</varname>. The engine will use the appropriate analyzer. Ex.: <codeph>lang=fr</codeph></stentry>
+					<stentry>Indicates the language of the keywords passed to parameter <varname>q</varname>. The engine will use the matching analyzer. Ex.: <codeph>lang=fr</codeph></stentry>
 					<stentry>Text</stentry>
 					<stentry></stentry>
 					<stentry>no</stentry>
@@ -89,7 +91,7 @@
 			</strow>
 			<strow>
 					<stentry>collapse.max</stentry>
-					<stentry>Indicates the number of document to send before collapsing activation. Ex.: <codeph>collapse.max=2</codeph></stentry>
+					<stentry>Indicates the number of documents to send before collapsing activation. Ex.: <codeph>collapse.max=2</codeph></stentry>
 					<stentry>Number</stentry>
 					<stentry>2</stentry>
 					<stentry>no</stentry>
@@ -103,7 +105,7 @@
 			</strow>
 			<strow>
 					<stentry>noCache</stentry>
-					<stentry>Disable cache (for the current call only). Ex.: <codeph>&#x0026;noCache</codeph></stentry>
+					<stentry>Disables the cache (for the current call only). Ex.: <codeph>&#x0026;noCache</codeph></stentry>
 					<stentry></stentry>
 					<stentry></stentry>
 					<stentry>no</stentry>
@@ -117,14 +119,14 @@
 			</strow>
 			<strow>
 					<stentry>fq</stentry>
-					<stentry>Add a filter to the current call. The parameters can be used several times in the same call for increasing filters. Ex.: <codeph>fq=date:20101201&#x0026;fq=color:red</codeph></stentry>
+					<stentry>Adds a filter to the current call. The parameters can be used several times in the same call for successive filters. Ex.: <codeph>fq=date:20101201&#x0026;fq=color:red</codeph></stentry>
 					<stentry>Text</stentry>
 					<stentry></stentry>
 					<stentry>no</stentry>
 			</strow>
 			<strow>
 					<stentry>rf</stentry>
-					<stentry>Add one or more fields to send. Ex.: <codeph>&#x0026;rf=date&#x0026;rf=color</codeph></stentry>
+					<stentry>Adds one or more fields to send. Ex.: <codeph>&#x0026;rf=date&#x0026;rf=color</codeph></stentry>
 					<stentry>Text (field's name)</stentry>
 					<stentry></stentry>
 					<stentry>no</stentry>
@@ -132,14 +134,14 @@
 						<strow>
 					<stentry>fl</stentry>
 					<stentry>Same as parameter <varname>rf</varname></stentry>
-					<stentry>Texte</stentry>
+					<stentry>Text</stentry>
 					<stentry></stentry>
 					<stentry>no</stentry>
 			</strow>
 						<strow>
 					<stentry>sort</stentry>
-					<stentry>Control results order. Using the abbreviation + ou - to sort by ascending or descending.  Ex.: <codeph>&#x0026;sort=-date&#x0026;sort=color</codeph></stentry>
-					<stentry>Texte</stentry>
+					<stentry>Controls results order. Using the abbreviation + ou - to sort by ascending or descending.  Ex.: <codeph>&#x0026;sort=-date&#x0026;sort=color</codeph></stentry>
+					<stentry>Text</stentry>
 					<stentry></stentry>
 					<stentry>no</stentry>
 			</strow>
@@ -152,7 +154,7 @@
 			</strow>
 						<strow>
 					<stentry>facet.multi</stentry>
-					<stentry>Even behavior that facet to be applied to fields containing multiple values (multi-valued fields). Ex.: <codeph>&#x0026;facet.multi=color</codeph> ou <codeph>&#x0026;facet.multi=color(2)</codeph></stentry>
+					<stentry>Same as parameter <varname>facet</varname>, to use with fields containing multiple values (multi-valued fields). Ex.: <codeph>&#x0026;facet.multi=color</codeph> ou <codeph>&#x0026;facet.multi=color(2)</codeph></stentry>
 					<stentry>Text(Number)</stentry>
 					<stentry></stentry>
 					<stentry>no</stentry>
