--- a/doc/en/dita/quick_start/env_var_unix.dita
+++ b/doc/en/dita/quick_start/env_var_unix.dita
@@ -2,45 +2,70 @@
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN"
 "http://docs.oasis-open.org/dita/dtd/task.dtd">
 <task id="quick_start_env_var_unix">
-  <title>Setup environment variables on a UNIX System</title>
+	<title>Setting up environment variables on an UNIX System
+	</title>
 
-  <shortdesc>You have to define the JAVA_HOME environment
-  variable.</shortdesc>
+	<shortdesc>You have to define the JAVA_HOME environment
+		variable.
+	</shortdesc>
 
-  <taskbody>
-    <steps>
-      <step>
-        <cmd>Set JAVA_HOME</cmd>
+	<taskbody>
+		<steps>
+			<step>
+				<cmd>Set JAVA_HOME</cmd>
 
-        <info>Replace <tt>[jdk-path]</tt> by the location of you JDK. For
-        example: <tt>/usr/jdk/jdk1.6.0_14</tt></info>
+				<info>
+					Replace
+					<tt>[jdk-path]</tt>
+					by the location of you JDK. For
+					example:
+					<tt>/usr/jdk/jdk1.6.0_14</tt>
+				</info>
 
-        <choices>
-          <choice>Korn or bash shells: <tt>export
-          JAVA_HOME=[jdk-path]</tt></choice>
+				<choices>
+					<choice>
+						Korn or bash shells:
+						<tt>export
+							JAVA_HOME=[jdk-path]</tt>
+					</choice>
 
-          <choice>If you are using Bourne shell:<codeblock>JAVA_HOME=[jdk-path]
+					<choice>
+						If you are using a Bourne shell:
+						<codeblock>JAVA_HOME=[jdk-path]
 export JAVA_HOME
-</codeblock></choice>
+</codeblock>
+					</choice>
 
-          <choice>IIf you are using C shell: <tt>set env JAVA_HOME
-          [jdk-path]</tt></choice>
-        </choices>
-      </step>
+					<choice>
+						IIf you are using a C shell:
+						<tt>set env JAVA_HOME
+							[jdk-path]</tt>
+					</choice>
+				</choices>
+			</step>
 
-      <step>
-        <cmd>Set PATH</cmd>
+			<step>
+				<cmd>Set PATH</cmd>
 
-        <choices>
-          <choice>Korn or bash shells: <tt>export
-          PATH=$JAVA_HOME/bin:$PATH</tt></choice>
+				<choices>
+					<choice>
+						Korn or bash shells:
+						<tt>export
+							PATH=$JAVA_HOME/bin:$PATH</tt>
+					</choice>
 
-          <choice>Bourne shell:<codeblock>PATH=$JAVA_HOME/bin:$PATH
-export PATH</codeblock></choice>
+					<choice>
+						Bourne shell:
+						<codeblock>PATH=$JAVA_HOME/bin:$PATH
+export PATH</codeblock>
+					</choice>
 
-          <choice>C shell: <tt>set env PATH $JAVA_HOME/bin:$PATH</tt></choice>
-        </choices>
-      </step>
-    </steps>
-  </taskbody>
+					<choice>
+						C shell:
+						<tt>set env PATH $JAVA_HOME/bin:$PATH</tt>
+					</choice>
+				</choices>
+			</step>
+		</steps>
+	</taskbody>
 </task>
