--- a/doc/en/dita/quick_start/launch_interface.dita
+++ b/doc/en/dita/quick_start/launch_interface.dita
@@ -2,31 +2,36 @@
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN"
 "http://docs.oasis-open.org/dita/dtd/task.dtd">
 <task id="quick_start_launch_interface">
-  <title>Display the web interface</title>
+	<title>Displaying the web interface</title>
 
-  <shortdesc>Open a compatible web browser (Internet Explorer,
-  Firefox/Mozilla, Safari), an enter an url that can reach your
-  server.</shortdesc>
+	<shortdesc>Open a compatible web browser (Internet Explorer,
+		Firefox/Mozilla, Safari), then enter an url matching your
+		server.</shortdesc>
 
-  <taskbody>
-    <steps>
-      <step>
-        <cmd>Open you favorite web browser.</cmd>
-      </step>
+	<taskbody>
+		<steps>
+			<step>
+				<cmd>Open you favorite web browser.</cmd>
+			</step>
 
-      <step>
-        <cmd>Enter an url that can reach your server</cmd>
+			<step>
+				<cmd>Enter an url matching your server</cmd>
 
-        <choices>
-          <choice>If the server runs on your desktop machine, you can use:
-          <xref format="html"
-          href="http://localhost:8080">http://localhost:8080 </xref></choice>
+				<choices>
+					<choice>
+						If the server runs on your desktop machine, you can use:
+						<xref format="html" href="http://localhost:8080">http://localhost:8080
+						</xref>
+					</choice>
 
-          <choice>If OSS runs on a remote server, you should build the
-          appropriate URL, like this: <codeph>http://[server-hostname]:8080
-          </codeph></choice>
-        </choices>
-      </step>
-    </steps>
-  </taskbody>
+					<choice>
+						If OSS runs on a remote server, you should build the
+						appropriate URL, like this:
+						<codeph>http://[server-hostname]:8080
+						</codeph>
+					</choice>
+				</choices>
+			</step>
+		</steps>
+	</taskbody>
 </task>
