--- a/doc/en/dita/quick_start/query_index.dita
+++ b/doc/en/dita/quick_start/query_index.dita
@@ -2,30 +2,49 @@
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN"
 "http://docs.oasis-open.org/dita/dtd/task.dtd">
 <task id="quick_start_query_index">
-  <title>Query the index</title>
+	<title>Querying the index</title>
 
-  <shortdesc>You can use the web interface to query the data in your
-  index.<image href="images/search.png" placement="break"
-  width="300"/></shortdesc>
+	<shortdesc>
+		You can use the web interface to query the data in your
+		index.
+		<image href="images/search.png" placement="break" width="300" />
+	</shortdesc>
 
-  <taskbody>
-    <steps>
-      <step>
-        <cmd>Select the <b>Query</b> panel.</cmd>
-      </step>
+	<taskbody>
+		<steps>
+			<step>
+				<cmd>
+					Select the
+					<b>Query</b>
+					panel.
+				</cmd>
+			</step>
 
-      <step>
-        <cmd>Load the already predefined <b>search</b> query template.</cmd>
-      </step>
+			<step>
+				<cmd>
+					Load the predefined
+					<b>search</b>
+					query template.
+				</cmd>
+			</step>
 
-      <step>
-        <cmd>Enter a word in the field named <b>Enter the query</b>, for
-        example: <codeph>open</codeph></cmd>
-      </step>
+			<step>
+				<cmd>
+					Enter a word in the field named
+					<b>Enter the query</b>
+					, for
+					example:
+					<codeph>open</codeph>
+				</cmd>
+			</step>
 
-      <step>
-        <cmd>Click on the <b>Search</b> button</cmd>
-      </step>
-    </steps>
-  </taskbody>
+			<step>
+				<cmd>
+					Click on the
+					<b>Search</b>
+					button
+				</cmd>
+			</step>
+		</steps>
+	</taskbody>
 </task>
