--- a/doc/en/dita/documentation.ditamap
+++ b/doc/en/dita/documentation.ditamap
@@ -2,69 +2,82 @@
 <!DOCTYPE bookmap PUBLIC "-//OASIS//DTD DITA BookMap//EN"
 "bookmap.dtd">
 <bookmap xml:lang="en-US">
-  <title><ph>Open Search Server documentation</ph><image
-  href="images/logo_oss.png" placement="break"/></title>
+	<title>
+		<ph>Open Search Server documentation</ph>
+		<image href="images/logo_oss.png" placement="break" />
+	</title>
 
-  <bookmeta>
-    <shortdesc>PRELIMINARY DRAFT</shortdesc>
+	<bookmeta>
+		<shortdesc>PRELIMINARY DRAFT</shortdesc>
 
-    <author/>
+		<author />
 
-    <authorinformation>
-      <personinfo>
-        <namedetails>
-          <personname>
-            <firstname>Emmanuel</firstname>
+		<authorinformation>
+			<personinfo>
+				<namedetails>
+					<personname>
+						<firstname>Emmanuel</firstname>
+						<lastname>Keller</lastname>
+						<otherinfo>Author</otherinfo>
+					</personname>
 
-            <lastname>Keller</lastname>
-          </personname>
+					<personname>
+						<firstname>Emmanuel</firstname>
 
-          <personname>
-            <firstname>Emmanuel</firstname>
+						<lastname>Gosse</lastname>
+						<otherinfo>Author</otherinfo>
+					</personname>
+					<personname>
+						<firstname>Sebastien</firstname>
 
-            <lastname>Gosse</lastname>
-          </personname>
-        </namedetails>
-      </personinfo>
+						<lastname>Andrivet</lastname>
+						<otherinfo>Translator, proofreader</otherinfo>
+					</personname>
+				</namedetails>
+			</personinfo>
 
-      <organizationinfo>
-        <namedetails>
-          <organizationnamedetails>
-            <organizationname>InfoPro Digital</organizationname>
-          </organizationnamedetails>
-        </namedetails>
+			<organizationinfo>
+				<namedetails>
+					<organizationnamedetails>
+						<organizationname>InfoPro Digital</organizationname>
+					</organizationnamedetails>
+				</namedetails>
 
-        <addressdetails><thoroughfare> 12-14, rue Mederic</thoroughfare>
-        <locality>Paris</locality> <country>France</country></addressdetails>
+				<addressdetails>
+					<thoroughfare> 12-14, rue Mederic</thoroughfare>
+					<locality>Paris</locality>
+					<country>France</country>
+				</addressdetails>
 
-        <urls>
-          <url>http://www.open-search-server.com</url>
-        </urls>
-      </organizationinfo>
-    </authorinformation>
+				<urls>
+					<url>http://www.open-search-server.com
+					</url>
+				</urls>
+			</organizationinfo>
+		</authorinformation>
 
-    <prodinfo>
-      <prodname>Open Search Server</prodname>
+		<prodinfo>
+			<prodname>Open Search Server</prodname>
 
-      <vrmlist>
-        <vrm release="Beta" rev="2" version="1.0"/>
-      </vrmlist>
-    </prodinfo>
+			<vrmlist>
+				<vrm release="Beta" rev="2" version="1.0" />
+			</vrmlist>
+		</prodinfo>
 
-    <bookrights>
-      <bookowner>
-        <organization>© InfoPro Digital 2009</organization>
-      </bookowner>
-    </bookrights>
-  </bookmeta>
+		<bookrights>
+			<bookowner>
+				<organization>© InfoPro Digital 2009</organization>
+			</bookowner>
+		</bookrights>
+	</bookmeta>
 
-  <chapter>
-    <topichead navtitle="Quick start">
-      <topicref format="ditamap" href="quick_start/quick_start.ditamap"/>
-    </topichead>
+	<chapter>
+		<topichead navtitle="Quick start">
+			<topicref format="ditamap" href="quick_start/quick_start.ditamap" />
+		</topichead>
 
-    <topicref href="api_select.dita" type="reference"/>
+		<topicref href="api_select.dita" type="reference" />
 
-    <topicref href="war_install_oss.dita" type="task"/>
-  </chapter>
+		<topicref href="war_install_oss.dita" type="task" />
+	</chapter>
 </bookmap>
