--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,10 +6,13 @@ CHANGE LOG
 Open Search Server 1.0 beta 2
 
 Bug fixes
+- 2811902: No content type in XML API responses
+- 2810881: Useless empty line on xml result
 - 2805843: start.bat and stop.bat requires CATALINA_HOME
 - 2808554: Collapsing returns less rows than expected
 
 New features
+- 2811901: adding collapsing for all documents be returned
 - 2807080: Update Apache Tomcat to version 6.0.20
 - 2808582: Add paging on query result
 
