--- a/doc/en/dita/quick_start/install_jdk.dita
+++ b/doc/en/dita/quick_start/install_jdk.dita
@@ -6,7 +6,7 @@
 
 	<shortdesc>Open Search Server (OSS) requires a Java™ runtime
 		environment
-		(JRE) version 5 or newer.</shortdesc>
+		(JRE) 5 or newer.</shortdesc>
 
 	<taskbody>
 		<steps>
