--- a/doc/en/dita/quick_start/launch_interface.dita
+++ b/doc/en/dita/quick_start/launch_interface.dita
@@ -5,7 +5,7 @@
 	<title>Displaying the web interface</title>
 
 	<shortdesc>Open a compatible web browser (Internet Explorer,
-		Firefox/Mozilla, Safari), then enter an url matching your
+		Firefox/Mozilla, Safari), then enter an URL matching your
 		server.</shortdesc>
 
 	<taskbody>
